2009-11-02  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/MoonlightAssemblyStep.cs: adapt to the MT linker merge.

2009-10-14  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (CECIL, LINKER): Point to profile-specific assembly.

2009-09-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Sort the
	  descriptors wrt type name, to avoid false negatives at
	  MoonAtkBridge build time.

2009-09-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Speed up by
	  two orders of magnitude, thanks to caching XPathNavigator
	  objects and calling Directory.GetFiles() just once.

	* Mono.Tuner/MoonlightA11yApiMarker.cs: Fix typo in comment.

2009-09-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yApiMarker.cs: Don't mark attributes
	  of non-a11y assemblies.

2009-09-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Rather use
	  the OutputDirectory provided on the command line, and
	  redirect some progress info or errors to the console.

	* Mono.Tuner/MoonlightA11yUsageInspectionStep.cs: Remove
	  unnecessary step.

2009-09-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj:
	* Mono.Tuner.dll.sources: Add new step MoonlightA11yApiMarker.

	* Mono.Tuner/MoonlightA11yApiMarker.cs:
	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Use a new
	  marker step to only mark API used, not mark recursively.

	* Mono.Tuner/MoonlightA11yUsageInspectionStep.cs: Use the new
	  marker step.

	* Makefile: Adding reference to System, as we need it for
	  System.Text.RegularExpressions.

2009-08-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Don't whitelist SC
	  attribs for base methods that are on our assembly.
	This finally makes a11y work without security disabled. The
	  summary of the troubles encountered: